...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="noScroll">

            <ImageButton
                android:id="@+id/cancelBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_baseline_close_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="New   Task" />

            <ImageButton
                android:id="@+id/completeBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_baseline_done_outline_24"
...
                        android:layout_height="wrap_content"
                        android:text="Trivial"
                        android:textColor="@color/gray"
                        android:visibility="gone" />

                    <RadioButton
                        android:id="@+id/trivialBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/grayBlue" />

                    <TextView
                        android:id="@+id/normalText"
...
                        android:layout_height="wrap_content"
                        android:text="Normal"
                        android:textColor="@color/mediumBlue"
                        android:visibility="gone" />

                    <RadioButton
                        android:id="@+id/normalBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/mediumBlue" />

                    <TextView
                        android:id="@+id/importantText"
...
                        android:layout_height="wrap_content"
                        android:text="Important"
                        android:textColor="@color/yellow"
                        android:visibility="gone" />

                    <RadioButton
                        android:id="@+id/importantBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/yellow" />

                    <TextView
                        android:id="@+id/milestoneText"
...
                        android:layout_height="wrap_content"
                        android:text="Milestone"
                        android:textColor="@color/red"
                        android:visibility="gone" />

                    <RadioButton
                        android:id="@+id/milestoneBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/red" />

                    <TextView
                        android:id="@+id/memorialText"
...
                        android:layout_height="wrap_content"
                        android:text="Memorial"
                        android:textColor="@color/magenta"
                        android:visibility="gone" />

                    <RadioButton
                        android:id="@+id/memorialBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/magenta" />
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>
...
